@@ -36,19 +36,19 @@ import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.common.primitives.Ints;
 import com.google.common.util.concurrent.Uninterruptibles;
+
+import org.apache.cassandra.Util;
 import org.apache.cassandra.index.internal.CollatedViewIndexBuilder;
 import org.junit.AfterClass;
 import org.junit.Assert;
 import org.junit.BeforeClass;
 import org.junit.Test;
-import org.junit.runner.RunWith;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.monitoring.runtime.instrumentation.AllocationRecorder;
 import com.google.monitoring.runtime.instrumentation.Sampler;
 import com.sun.management.ThreadMXBean;
-import org.apache.cassandra.OrderedJUnit4ClassRunner;
 import org.apache.cassandra.SchemaLoader;
 import org.apache.cassandra.cql3.QueryOptions;
 import org.apache.cassandra.cql3.QueryProcessor;
@@ -78,7 +78,6 @@ import org.apache.cassandra.utils.FBUtilities;
 import org.apache.cassandra.utils.ObjectSizes;
 import org.apache.cassandra.utils.concurrent.Refs;
 
-@RunWith(OrderedJUnit4ClassRunner.class)
 public class CompactionAllocationTest
 {
     private static final Logger logger = LoggerFactory.getLogger(CompactionAllocationTest.class);
@@ -394,7 +393,7 @@ public class CompactionAllocationTest
         Measurement measurement = createMeasurement();
         measurement.start();
         for (int i=0; i<numAlloc; i++)
-            new Integer(i);
+            Integer.valueOf(i);
 
         measurement.stop();
         logger.info(" ** {}", measurement.prettyBytes());
@@ -527,7 +526,7 @@ public class CompactionAllocationTest
                             reads.add(() -> runQuery(query, cfs.metadata.get()));
                         }
                     }
-                    cfs.forceBlockingFlush();
+                    Util.flush(cfs);
                 }
 
                 Assert.assertEquals(numSSTable, cfs.getLiveSSTables().size());
@@ -642,7 +641,7 @@ public class CompactionAllocationTest
                             reads.add(() -> runQuery(query, cfs.metadata.get()));
                         }
                     }
-                    cfs.forceBlockingFlush();
+                    Util.flush(cfs);
                 }
 
                 Assert.assertEquals(numSSTable, cfs.getLiveSSTables().size());
@@ -742,7 +741,7 @@ public class CompactionAllocationTest
                             reads.add(() -> runQuery(query, cfs.metadata.get()));
                         }
                     }
-                    cfs.forceBlockingFlush();
+                    Util.flush(cfs);
                 }
 
                 Assert.assertEquals(numSSTable, cfs.getLiveSSTables().size());
@@ -836,7 +835,7 @@ public class CompactionAllocationTest
                                                            makeRandomString(rowWidth>>2), makeRandomString(rowWidth>>2));
                         }
                     }
-                    cfs.forceBlockingFlush();
+                    Util.flush(cfs);
                 }
 
                 for (IndexDef index : indexes)
